package PoolGame.impl;

import PoolGame.WinStrategy;

public class ContinueOperation implements WinStrategy {
    @Override
    public int doOperation()
    {
        System.out.println("继续游戏");
        return 0;
    }
}
