package PoolGame.impl;

import PoolGame.WinStrategy;

public class WinOperation implements WinStrategy {
    @Override
    public int doOperation()
    {
        System.out.println("成功");
        return 0;
    }
}
