@startuml

interface Strategy {
  + doOperation(): void
}

class ContinueOperation {
  + doOperation(): void
}

class LossOperation {
  + doOperation(): void
}

class WinOperation {
  + doOperation(): void
}

class Context {
  - WinStrategy: Strategy
  + setStrategy(strategy: Strategy): void
  + executeStrategy(): void
}

Context *-- Strategy : has-a

Context --> ContinueOperation : uses
Context --> LossOperation : uses
Context --> WinOperation : uses

class WinOperation implements Strategy
class LossOperation implements Strategy
class ContinueOperation implements Strategy

@enduml
